Added separate logic for preparing a heading to show.
The new functions take in a heading (or angle) and convert it to the string representation dependent on heading view type.

I also made headings shown without the decimal round rather than truncate.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,7 @@ set(SOURCES
 	src/screens/gm/globalMessageEntryView.cpp
 	src/screens/gm/chatDialog.cpp
 	src/screens/gm/tweak.cpp
+	src/screenComponents/logic/heading.cpp
 	src/screenComponents/aimLock.cpp
 	src/screenComponents/alertOverlay.cpp
 	src/screenComponents/helpOverlay.cpp
